# myos-x86_64

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Taskfile.yaml  gdb.scr  qemu_trace  rustfmt.toml  task.py
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: config.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: boot_info.rs  elf.rs  graphic_info.rs  kernel_config.rs  lib.rs  libm.rs  mem_desc.rs
kernel/: Cargo.toml  linker.ld  rust-toolchain  x86_64.json
kernel/.cargo/: config.toml
kernel/src/: console.rs  debug_terminal.rs  dwarf.rs  env.rs  error.rs  main.rs  panic.rs  serial.rs  terminal.rs  test.rs  theme.rs
kernel/src/arch/: acpi.rs  addr.rs  apic.rs  asm.rs  context.rs  cpu.rs  gdt.rs  idt.rs  mod.rs  proc.rs  process.rs  qemu.rs  syscall.rs  task.rs  tss.rs
kernel/src/arch/apic/: local.rs  mod.rs  timer.rs
kernel/src/arch/idt/: info.rs  mod.rs
kernel/src/arch/register/: control.rs  cr2.rs  cr3.rs  mod.rs  model_specific.rs  msi.rs  segment.rs  status.rs
kernel/src/arch/task/: executor.rs  mod.rs  simple_executor.rs
kernel/src/bus/: mod.rs
kernel/src/bus/pci/: conf_space.rs  device.rs  device_id.rs  mod.rs  msi.rs  vendor_id.rs
kernel/src/bus/usb/: device.rs  mod.rs  setup_trb.rs
kernel/src/debug/: dwarf.rs  mod.rs
kernel/src/device/: console.rs  local_apic_timer.rs  manager.rs  mod.rs  panic_screen.rs  pci.rs  ps2_keyboard.rs  ps2_mouse.rs  rtl8139.rs  serial.rs  speaker.rs  test.rs  uart.rs  usb.rs  zakki.rs
kernel/src/fs/: exec.rs  initramfs.rs  mod.rs  path.rs  vfs.rs
kernel/src/graphics/: color.rs  draw.rs  font.rs  frame_buf.rs  frame_buf_console.rs  frame_buffer.rs  mod.rs  multi_layer.rs  simple_window_manager.rs  terminal.rs
kernel/src/mem/: allocator.rs  bitmap.rs  frame_collection.rs  mod.rs  paging.rs
kernel/src/net/: arp.rs  eth.rs  icmp.rs  ip.rs  mod.rs  tcp.rs  udp.rs
kernel/src/util/: ascii.rs  cstring.rs  fifo.rs  hexdump.rs  id.rs  lifo.rs  logger.rs  mod.rs  mutex.rs  random.rs  sleep.rs  theme.rs
(+192 files in other folders)
