[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
authors = ["Zakki <zakki0925224@gmail.com>"]

[dependencies]
common = { path = "../common" }
uefi = { version = "*", features = ["alloc"] }
uefi-services = "*"
log = "*"
xmas-elf = "*"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
