[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Zakki <zakki0925224@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
