[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Zakki <zakki0925224@gmail.com>"]
description = "A hobby operating system written in Rust."

[dependencies]
common = { path = "../common" }
spin = "0.9.8"
log = "0.4.18"
bitflags = "2.3.1"
modular-bitfield = "0.11.2"
pci-ids = "0.2.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
