[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Zakki <zakki0925224@gmail.com>"]
description = "A hobby operating system written in Rust."

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
common = { path = "../common" }
log = "0.4.18"
pci-ids = "0.2.5"
linked_list_allocator = "0.10.5"
